RESOLVED FIXED 128030
DFG->FTL tier-up shouldn't assume that LoopHints stay at the tops of loops
https://bugs.webkit.org/show_bug.cgi?id=128030
Summary DFG->FTL tier-up shouldn't assume that LoopHints stay at the tops of loops
Filip Pizlo
Reported 2014-01-31 17:03:20 PST
They can totally be CFG-simplified into all sorts of bizarre places. <rdar://problem/15944147>
Attachments
the patch (2.51 KB, patch)
2014-01-31 17:18 PST, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2014-01-31 17:18:28 PST
Created attachment 222865 [details] the patch
Filip Pizlo
Comment 2 2014-01-31 17:24:46 PST
Note You need to log in before you can comment on or make changes to this bug.