DFG->FTL tier-up shouldn't assume that LoopHints stay at the tops of loops https://bugs.webkit.org/show_bug.cgi?id=128030

Reviewed by Oliver Hunt.

Remove a bogus assertion. The only thing that matters is that the LoopHint had at one
point in time been at the top of a loop header, and that it is now at the top of a
basic block. But the basic block that it's at the top of now doesn't have to be the
same as the loop header that it once was the top of.

* dfg/DFGTierUpCheckInjectionPhase.cpp:
(JSC::DFG::TierUpCheckInjectionPhase::run):
* tests/stress/tier-up-in-loop-with-cfg-simplification.js: Added.
(foo):



Canonical link: https://commits.webkit.org/146042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163224 268f45cc-cd09-0410-ab3c-d52691b4dbfc